name:                dates
version:             0.1.0.0
synopsis:            An Integer-free version of some of the basic stuff found in 
                     Data.Time.
homepage:            http://github.com/jtobin/dates
license:             BSD3
license-file:        LICENSE
author:              Jared Tobin
maintainer:          jared@jtobin.ca
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Data.Time.Dates
  build-depends:       base >= 4.6, 
                       deepseq >= 1.3,
                       QuickCheck >= 2.6,
                       time >= 1.4

